[tool.poetry]
name = "latent_motion_planning"
version = "0.1.0"
description = "A repository for Autonomous Vehicle motion planning"
authors = ["fahmyadan <fahmy.adan14@imperial.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^3.3.1"
nbsphinx = "^0.8.0"
sphinx-rtd-theme = "^0.5.0"
flake8 = "^3.9.2"
mypy = "^0.991"
black = "^23.1.0"
importlib_metadata = "<5"
pytest = "^6.0.1"
types-pyyaml = "^0.1.6"
types-termcolor = "^0.1.0"
pre-commit = "^2.7.1"
pytorch-mppi = "*"
chardet = "*"
importlib-resources = "*"
wandb = "*"
moviepy = "*"
hydra-core = "1.0.3"
omegaconf = "2.0.2"
tensorboard = "^2.17.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
